--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <!-- Left Side: Logo -->
         <a href="index.html" class="navbar-brand d-flex align-items-center" style="text-decoration: none;">
             <h2 class="m-0 text-white" style="font-size: 1.8rem; white-space: nowrap; margin: 0;">
-                <i class="fa fa-car me-2"></i> JULIO'S JUNK YARD
+                <i class="fa fa-car me-2"></i> JULIO'S JUNKYARD
             </h2>
         </a>
 
