--- a/service.html
+++ b/service.html
@@ -69,7 +69,7 @@
         <!-- Left Side: Logo -->
         <a href="index.html" class="navbar-brand d-flex align-items-center" style="text-decoration: none;">
             <h2 class="m-0 text-white" style="font-size: 1.8rem; white-space: nowrap; margin: 0;">
-                <i class="fa fa-car me-2"></i> JULIO'S JUNK YARD
+                <i class="fa fa-car me-2"></i> JULIO'S JUNKYARD
             </h2>
         </a>
 
@@ -436,7 +436,7 @@ document.addEventListener("DOMContentLoaded", function () {
         <div class="copyright">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0" style="color: white !important;">
-                    &copy; <a class="border-bottom" href="#" style="color: white !important;">JULIOS JUNK YARD</a>, All Right Reserved.
+                    &copy; <a class="border-bottom" href="#" style="color: white !important;">JULIOS JUNKYARD</a>, All Right Reserved.
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <div class="footer-menu">
